--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,55 +1,57 @@
 {
-  "name": "mail-server",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~10.0.3",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "~10.0.3",
-    "@angular/compiler": "~10.0.3",
-    "@angular/core": "~10.0.3",
-    "@angular/forms": "~10.0.3",
-    "@angular/localize": "~10.0.3",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "~10.0.3",
-    "@angular/platform-browser-dynamic": "~10.0.3",
-    "@angular/router": "~10.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
-    "bootstrap": "^4.5.3",
-    "font-awesome": "^4.7.0",
-    "materialize-css": "^1.0.0-rc.2",
-    "ngx-toastr": "^13.2.1",
-    "rxjs": "~6.5.5",
-    "toastr": "^2.1.4",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.2",
-    "@angular/cli": "~10.0.2",
-    "@angular/compiler-cli": "~10.0.3",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
-  }
+    "name": "mailserver",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~10.0.3",
+        "@angular/cdk": "^10.2.7",
+        "@angular/common": "~10.0.3",
+        "@angular/compiler": "~10.0.3",
+        "@angular/core": "~10.0.3",
+        "@angular/forms": "~10.0.3",
+        "@angular/localize": "~10.0.3",
+        "@angular/material": "^10.2.7",
+        "@angular/platform-browser": "~10.0.3",
+        "@angular/platform-browser-dynamic": "~10.0.3",
+        "@angular/router": "~10.0.3",
+        "@ckeditor/ckeditor5-angular": "^2.0.1",
+        "@ckeditor/ckeditor5-build-classic": "^27.1.0",
+        "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+        "bootstrap": "^4.5.3",
+        "font-awesome": "^4.7.0",
+        "materialize-css": "^1.0.0-rc.2",
+        "ngx-toastr": "^13.2.1",
+        "rxjs": "~6.5.5",
+        "toastr": "^2.1.4",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.10.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1000.2",
+        "@angular/cli": "~10.0.2",
+        "@angular/compiler-cli": "~10.0.3",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^6.0.0",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~5.0.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~3.3.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "typescript": "~3.9.5"
+    }
 }
