--- a/Backend/config/.env
+++ b/Backend/config/.env
@@ -1,4 +1,4 @@
 
 PRIVATE_KEY = MySecureKey
-EMAIL =Generatoremail73@gmail.com
-PASSWORD=#alpha123
+EMAIL = autoreplygenerator8@gmail.com
+PASSWORD=#alpha12345
