--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "backend",
+  "name": "emailserver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -19,18 +18,23 @@
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "hpp": "^0.2.3",
+    "imap": "^0.8.19",
     "joi": "^17.3.0",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "mailin": "^3.0.4",
+    "mailparser": "^3.2.0",
     "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
     "nodemailer-sendinblue-transport": "^1.2.3",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "router": "^1.3.5",
+    "smtp-server": "^3.8.0",
     "xss-clean": "^0.1.1"
   }
 }
